syntax = "proto3";

package auth_pb;

option go_package = ".;auth_pb";

// Messages
message User {
    string username = 1;
    string passwordHash = 2;
}


// Req:Resp Messages
message LoginRequest {
    User user = 1;
}
message LoginResponse {
    string result = 1;
    string token = 2;
}

message RegisterRequest {
    User user = 1;
}
message RegisterResponse {
    string result = 1;
    string token = 2;
}

// Services
service Auth {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
}